--- a/game.css
+++ b/game.css
@@ -4,7 +4,6 @@ body{
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
 }
 
 .fejlec{
@@ -511,7 +510,7 @@ body{
 
 /* kör alakú képek */
 .mini-slide img {
-    width: 65%;
+    width: 60%;
     height: auto;
     aspect-ratio: 1/1;
     border-radius: 50%;
@@ -537,16 +536,42 @@ body{
 }
 
 .accept-btn {
-    width: 40%;
-    font-size: 1rem;
+    width: 30%;
+    font-size: 0.7rem;
     font-weight: bold;
     padding: 5px;
+    font-family: 'PixelText', serif;
+    background-color: #f1e2b2 ;
+    color: #A69D7D;
+    border: 0px;
+    margin-left: 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border-radius: 8px;
 }
 
-.next-btn {
-    width: 40%;
-    font-size: 1rem;
+.next-btnn {
+    width: 30%;
+    font-size: 0.7rem;
     font-weight: bold;
     padding: 5px;
+    font-family: 'PixelText', serif;
+    background-color: #f1e2b2;
+    color: #A69D7D;
+    text-decoration: none;
+    border: 0px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border-radius: 8px;
 }
 
+
+.accept-btn:hover {
+    box-shadow: 0 0 10px 3px #A69D7D; 
+    transform: translateY(-2px); 
+}
+
+.next-btnn:hover{
+    box-shadow: 0 0 10px 3px #A69D7D; 
+    transform: translateY(-2px);   
+}
